# valueiterationpackage

./: README.md  pyproject.toml
examples/: Example 1.py  Example 2.py  Grid Problem.ipynb  Grid World.py
examples/.ipynb_checkpoints/: Grid Problem-checkpoint.ipynb  Grid World-checkpoint.py
tests/: test_basic.py  test_valueiteration.py
valueiteration/: __init__.py  pseudocode.md  valueiteration.py
valueiteration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
valueiteration/.ipynb_checkpoints/: valueiteration-checkpoint.py
