[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valueiteration"
version = "0.1.0"
maintainers = [
  { name="Kyle Russell", email="russel28@lancaster.ac.uk" },
]
authors = [
  { name="Kyle Russell", email="russel28@lancaster.ac.uk" },
]
description = "Synchronous value iteration algorithm for Markov Decision Processes"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
homepage = "https://github.com/kylerussell680/value_iteration"

